[package]
name = "rust-git"
version = "0.1.0"
edition = "2021"

[features]
default = []
online_judge = []

[dependencies]
clap = { version = "4.4", features = ["derive"] }
sha1 = "0.10.6"
flate2 = "1.0"
chrono = "0.4"
hex = "0.4"
walkdir = "2.4"
thiserror = "1.0"
anyhow = "1.0"
dirs = "5.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
url = "2.4"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
tar = "0.4"
ftp = "3.0"

[dev-dependencies]
tempfile = "3.9"
assert_cmd = "2.0"
predicates = "3.0"
