[package]
name = "rust-git"
version = "0.1.0"
edition = "2021"

[features]
default = []
online_judge = []

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
sha1 = "0.10.6"
flate2 = "1.0.28"
chrono = "0.4"
hex = "0.4.3"
walkdir = "2.4"
thiserror = "1.0.58"
anyhow = "1.0.81"
dirs = "5.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
url = "2.4"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
tar = "0.4.44"
tempfile = "3.9"
suppaftp = "6.3.0"
tokio = { version = "1.45.1", features = ["full"] }
axum = "0.8.4"
fossil-delta = "0.2.0"

[dev-dependencies]
tempfile = "3.9"
assert_cmd = "2.0"
predicates = "3.0"

[profile.release]
strip = true
